exports[`invalid(1): {\"dependencies\": {\"a\": \"git+https://example.com/u/r\"}} 1`] = `

[Input]
  1 | {"dependencies": {"a": "git+https://example.com/u/r"}}

`;

exports[`invalid(1): {\"dependencies\": {\"a\": \"git+https://example.com/u/r\"}} 2`] = `

Message:
> 1 | {"dependencies": {"a": "git+https://example.com/u/r"}}
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`a\` should use a published version.

`;

exports[`invalid(10): {\"dependencies\": {\"foo\": \"GIT://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "GIT://github.com/user/repo.git"}}

`;

exports[`invalid(10): {\"dependencies\": {\"foo\": \"GIT://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "GIT://github.com/user/repo.git"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(11): {\"dependencies\": {\"foo\": \"GIT+HTTPS://github.com/user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "GIT+HTTPS://github.com/user/repo"}}

`;

exports[`invalid(11): {\"dependencies\": {\"foo\": \"GIT+HTTPS://github.com/user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "GIT+HTTPS://github.com/user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(12): {\"dependencies\": {\"foo\": \"https://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://github.com/user/repo.git"}}

`;

exports[`invalid(12): {\"dependencies\": {\"foo\": \"https://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://github.com/user/repo.git"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(13): {\"dependencies\": {\"foo\": \"https://github.com/user/repo.git#v1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://github.com/user/repo.git#v1.0.0"}}

`;

exports[`invalid(13): {\"dependencies\": {\"foo\": \"https://github.com/user/repo.git#v1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://github.com/user/repo.git#v1.0.0"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(14): {\"dependencies\": {\"foo\": \"git@github.com:user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "git@github.com:user/repo"}}

`;

exports[`invalid(14): {\"dependencies\": {\"foo\": \"git@github.com:user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "git@github.com:user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(15): {\"dependencies\": {\"foo\": \"user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "user/repo"}}

`;

exports[`invalid(15): {\"dependencies\": {\"foo\": \"user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "user/repo"}}
    |                          ^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(16): {\"dependencies\": {\"foo\": \"my.org/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "my.org/repo"}}

`;

exports[`invalid(16): {\"dependencies\": {\"foo\": \"my.org/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "my.org/repo"}}
    |                          ^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(17): {\"dependencies\": {\"foo\": \"user/repo#v1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "user/repo#v1.0.0"}}

`;

exports[`invalid(17): {\"dependencies\": {\"foo\": \"user/repo#v1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "user/repo#v1.0.0"}}
    |                          ^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(18): {\"dependencies\": {\"foo\": \"github:user/repo\"}} 1`] = `

[Input]
Options:
- allowWithRef: false

Code:
  1 | {"dependencies": {"foo": "github:user/repo"}}

`;

exports[`invalid(18): {\"dependencies\": {\"foo\": \"github:user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "github:user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(19): {\"devDependencies\": {\"foo\": \"git+https://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"devDependencies": {"foo": "git+https://github.com/user/repo.git"}}

`;

exports[`invalid(19): {\"devDependencies\": {\"foo\": \"git+https://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"foo": "git+https://github.com/user/repo.git"}}
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"git+https://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "git+https://github.com/user/repo.git"}}

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"git+https://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "git+https://github.com/user/repo.git"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(20): {\"dependencies\": {\"foo\": \"https://github.com/user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://github.com/user/repo"}}

`;

exports[`invalid(20): {\"dependencies\": {\"foo\": \"https://github.com/user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://github.com/user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(21): {\"dependencies\": {\"foo\": \"https://gitlab.com/user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://gitlab.com/user/repo"}}

`;

exports[`invalid(21): {\"dependencies\": {\"foo\": \"https://gitlab.com/user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://gitlab.com/user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(22): {\"dependencies\": {\"foo\": \"https://gitlab.com/user/repo.GIT\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://gitlab.com/user/repo.GIT"}}

`;

exports[`invalid(22): {\"dependencies\": {\"foo\": \"https://gitlab.com/user/repo.GIT\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://gitlab.com/user/repo.GIT"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(23): {\"dependencies\": {\"foo\": \"https://bitbucket.org/user/repo.Git\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://bitbucket.org/user/repo.Git"}}

`;

exports[`invalid(23): {\"dependencies\": {\"foo\": \"https://bitbucket.org/user/repo.Git\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://bitbucket.org/user/repo.Git"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(24): {\"dependencies\": {\"foo\": \"ssh://git@github.com/user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "ssh://git@github.com/user/repo"}}

`;

exports[`invalid(24): {\"dependencies\": {\"foo\": \"ssh://git@github.com/user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "ssh://git@github.com/user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(25): {\"dependencies\": {\"foo\": \"https://user:token@github.com/user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://user:token@github.com/user/repo"}}

`;

exports[`invalid(25): {\"dependencies\": {\"foo\": \"https://user:token@github.com/user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://user:token@github.com/user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(26): {\"dependencies\": {\"foo\": \"https://github.com/user/repo.GIT\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://github.com/user/repo.GIT"}}

`;

exports[`invalid(26): {\"dependencies\": {\"foo\": \"https://github.com/user/repo.GIT\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://github.com/user/repo.GIT"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(27): {\"dependencies\": {\"foo\": \"git@github.com:user/repo.GIT\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "git@github.com:user/repo.GIT"}}

`;

exports[`invalid(27): {\"dependencies\": {\"foo\": \"git@github.com:user/repo.GIT\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "git@github.com:user/repo.GIT"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"git://github.com/user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "git://github.com/user/repo"}}

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"git://github.com/user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "git://github.com/user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(4): {\"dependencies\": {\"foo\": \"git://github.com/user/repo.git\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "git://github.com/user/repo.git"}}

`;

exports[`invalid(4): {\"dependencies\": {\"foo\": \"git://github.com/user/repo.git\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "git://github.com/user/repo.git"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"github:user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "github:user/repo"}}

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"github:user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "github:user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(6): {\"dependencies\": {\"foo\": \"gitlab:user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "gitlab:user/repo"}}

`;

exports[`invalid(6): {\"dependencies\": {\"foo\": \"gitlab:user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "gitlab:user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(7): {\"dependencies\": {\"foo\": \"bitbucket:user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "bitbucket:user/repo"}}

`;

exports[`invalid(7): {\"dependencies\": {\"foo\": \"bitbucket:user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "bitbucket:user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(8): {\"dependencies\": {\"foo\": \"gist:11081aaa281\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "gist:11081aaa281"}}

`;

exports[`invalid(8): {\"dependencies\": {\"foo\": \"gist:11081aaa281\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "gist:11081aaa281"}}
    |                          ^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"GitHub:user/repo\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "GitHub:user/repo"}}

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"GitHub:user/repo\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "GitHub:user/repo"}}
    |                          ^^^^^^^^^^^^^^^^^^ Git dependency \`foo\` should use a published version.

`;
